--- a/static/index.html
+++ b/static/index.html
@@ -1242,11 +1242,12 @@
                     <div class="flex-1 overflow-x-auto scrollbar-hide">
                         <div class="flex items-center gap-1 min-w-max pr-2">
                             <div v-for="tab in openTabs" :key="tab.id" @click="activateTab(tab.id)"
-                                class="group flex items-center gap-1 h-5 px-1.5 rounded-md border text-[10px] font-medium cursor-pointer select-none transition-colors"
+                                class="group flex flex-none items-center gap-1 h-5 w-36 px-1.5 rounded-md border text-[10px] font-medium cursor-pointer select-none transition-colors"
                                 :class="activeTabId === tab.id
                                     ? 'bg-blue-50 border-blue-200 text-blue-700 dark:bg-[#44475a] dark:border-[#6272a4] dark:text-[#f8f8f2]'
                                     : 'bg-slate-50 border-slate-200 text-slate-600 hover:bg-slate-100 dark:bg-[#2f3242] dark:border-[#44475a] dark:text-[#cfcfe8] dark:hover:bg-[#44475a]'">
-                                <span class="max-w-[180px] truncate">{{ tab.title }}</span>
+                                <span class="material-symbols-rounded text-[12px] shrink-0">description</span>
+                                <span class="min-w-0 flex-1 truncate">{{ tab.title }}</span>
                                 <button @click.stop="closeTab(tab.id)"
                                     class="w-3.5 h-3.5 flex items-center justify-center rounded hover:bg-black/10 dark:hover:bg-white/10 transition-colors"
                                     title="Close tab">
